# nusstool

./: .clang-tidy  .gitignore  .gitmodules  README.md  makefile
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/scl/: action.yml
.github/actions/tr/: action.yml
.github/workflows/: build.yml  test.yml
cli/: Cargo.toml
cli/src/: main.rs
include/: bitmap.h  buffer.h  cfg.h  error.h  example.h  macros.h  nusheader.h  nusstool.h  nususb.h  types.h
lib/: Cargo.toml
lib/src/: buffer.rs  error.rs  lib.rs  nusheader.rs
src/: bitmap.c  buffer.c  cfg.c  error.c  example.c  main.c  nusheader.c  nususb.c
